--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>TY-M dev adventures</title>
 
-<xmp theme="journal" style="display:none;">
+<xmp style="display:none;">
 # TY-M ideas
 
 ## Slowly-changing dimension handling for dim_line_item
