--- a/index.html
+++ b/index.html
@@ -1,20 +1,63 @@
 <!DOCTYPE html>
 <html>
-<title>TY-M dev adventures</title>
+<head>
+  <meta charset="utf-8"/>
+  <title>TY-M dev adventures</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cardo" />
+ <style type="text/css">
+  body{margin:40px auto;
+      padding: 1em;
+      max-width:36em;
+      background:#ddd;
+      color:#333;
+      font: 100% 'Cardo', serif;
+      font-size:1em;
+      line-height: 1.5em;}
+      h1,h2,h3{line-height:1.2;
+               font-weight: normal;
+               font:100% "league-gothic",sans-serif;
+               font-size: 1.7em}
+ </style>
+ <script src="https://use.typekit.net/nvq3nyg.js"></script>
+ <script>try{Typekit.load({ async: true });}catch(e){}</script>
+</head>
 
-<xmp theme="simplex" style="display:none;">
+<div id="content"></div>
+  <script>
+
+var somemd =`
+<!-- Main content here as markdown -->
+
 # TY-M ideas
 
 ## Slowly-changing dimension handling for dim_line_item
-**2016-05-09**
+<small>_[2016-05-09]_</small>
 
- - Hold table load is somewhat incremental already: all modified items get added on to the hold table (not really distinguished from prior versions, but we can use last_modified_date_time for that)
- - So, pull for dim_line_item update begins by taking all records with most recent created_at timestamps from hold_dfp_line_item.
- - These can be inserted directly to dim_line_item, with current_date as effective_dt and created_at
- - Then find line_item_code values that match newly-inserted rows, with prior created_at and NULL effective_end_dt
- - update effective_end_dt of those rows with current_date
+- Hold table load is somewhat incremental already: all modified items get added on to the hold table (not really distinguished from prior versions, but we can use last_modified_date_time for that)
+- So, pull for dim_line_item update begins by taking all records with most recent created_at timestamps from hold_dfp_line_item.
+- These can be inserted directly to dim_line_item, with current_date as effective_dt and created_at
+- Then find line_item_code values that match newly-inserted rows, with prior created_at and NULL effective_end_dt
+- update effective_end_dt of those rows with current_date
+- TL;DR: treat line_item_code as the fixed SCD key; treat change in any other column as requiring a new record.
 
-</xmp>
 
-<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+## Handling fact updates
+<small>_[2016-05-11]_</small>
+
+- [Accumulating snapshot](http://decisionworks.com/2010/12/design-tip-130-accumulating-snapshots-for-complex-workflows/) fact table pattern sounded attractive, but we cannot apply it to our case. It is a way of handling late-arriving facts, but supposes access to the transactional workflow milestone data.
+- In our case, DFP is already returning us pre-aggregated snapshot data; it's just that the snapshot data can be restated over time as more atomic data accumulates on their end.
+- For this reason, the best approach will be to reload over a reasonable window to keep our fact table records current with the latest stated values from DFP
+- Exact number of days in the window TBD based on analysis of recent re-pulls of data we had loaded previously.
+- Best guess as of now: 14 reload window (requires some further investigation to rule out first-of-month being exceptional)
+
+ <!-- ==============================
+ Main content end above -->
+ `
+
+document.getElementById('content').innerHTML =
+  marked(somemd);
+</script>
+
+<!-- <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script> -->
 </html>
