--- a/index.html
+++ b/index.html
@@ -4,28 +4,14 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width" initial-scale=1>
   <title>TY-M dev adventures</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cardo" />
- <style type="text/css">
-  body{margin:40px auto;
-      padding: 1em;
-      max-width:36em;
-      background:#ddd;
-      color:#666;
-      font: 100% 'Cardo', serif;
-      font-size:1em;
-      line-height: 1.5em;}
-      h1,h2,h3{line-height:1.2;
-               font-weight: normal;
-               font:100% "league-gothic",sans-serif;
-               font-size: 1.7em}
-  code{background: #eee; color: #444; padding: 2px; border: #999}
- </style>
+
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cardo" />
  <script src="https://use.typekit.net/nvq3nyg.js"></script>
  <script>try{Typekit.load({ async: true });}catch(e){}</script>
-</head>
 
-<div id="content"></div>
+  <link href="style/notmuch.css" rel="stylesheet" />
+
+</head>
 
 <xmp style="display:none;">
 <!-- Main content here as markdown -->
@@ -54,5 +40,9 @@
 
 
 </xmp>
- <script src="code/strapdown.js"></script>
+<!-- end markdown content section -->
+<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
+ <script src="code/straplessdown.js"></script>
  </html>
