Conform to straplessdown

--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width" initial-scale=1>
-  <title>TY-M dev adventures</title>
-
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cardo" />
- <script src="https://use.typekit.net/nvq3nyg.js"></script>
- <script>try{Typekit.load({ async: true });}catch(e){}</script>
-
-  <link href="style/notmuch.css" rel="stylesheet" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" initial-scale=1>
+    <title>The Straplessdown Example!</title>
+    <link href="style/notmuch.css" rel="stylesheet" />
 
 </head>
 
-<xmp style="display:none;">
-<!-- Main content here as markdown -->
+<body>
+    <article style="display:none;">
+        <!-- Main content here as markdown -->
 
 # TY-M ideas
 
@@ -39,10 +36,13 @@
 - Best guess as of now: 14-day reload window (requires some further investigation to rule out first-of-month being exceptional)
 
 
-</xmp>
-<!-- end markdown content section -->
-<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
- <script src="code/straplessdown.js"></script>
- </html>
+    </article>
+    <!-- end markdown content section -->
+
+    <script src="code/jquery-2.2.3.min.js"></script>
+    <script src="code/marked.min.js"></script>
+    <script src="code/prettify.min.js"></script>
+    <script src="code/straplessdown.js"></script>
+</body>
+
+</html>
