Fix link tags in stylesheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" initial-scale=1>
-    <title>The Straplessdown Example!</title>
+    <title>Thomas Yager-Madden Dev Blog</title>
     <link href="style/notmuch.css" rel="stylesheet" />
 
 </head>
