--- a/index.html
+++ b/index.html
@@ -10,13 +10,32 @@
 </head>
 
 <body>
-    <article style="display:none;">
+    <pre style="display:none;">
         <!-- Main content here as markdown -->
 
-# TY-M ideas
+# TY-M notions and notes
+
+## Distinct line items from DFP line item service
+<span class="small">_[2016-05-18]_</span>
+Over time, the table `warehouse_hold.hold_dfp_line_item` has accumulated many rows for each line item. In most cases this is due to changes in the line item configuration or status; it may also sometimes be due to overlapping attempts to bring the data up-to-date. In any case, Analytics is interested only in the most recent record for each item. As noted in [Trello](https://trello.com/c/ygfrMXJr/615-warehouse-etl-investigate-and-fix-line-item-discrepancies-between-dfp-and-hold-dfp-line-item-table), I created a new `hold_dfp_line_item_distinct` table, to include just one record per line_item_id, based on maximum `last_modified_date_time` and `created_at` values.
+
+Somewhat oddly (so it seems to me), while a CTE defined as
+
+```
+select max(last_modified_date_time) as last_modified_date_time
+         , max(created_at) as created_at
+         , line_item_id
+         from hold_dfp_line_item
+         group by 3
+```
+has the expected number of rows, joining that on all three columns back to the main table resulted in a small number (39 out of about a million) of duplicate rows.
+
+I have been able to resolve the matter by using `select distinct`  in the main query, but it does seem weird that should be necessary.
+
+Also, as we update with new pulls from the line item service, we'll begin to have multiple rows per line item again, and if this simplified table is desireable in Hold, we'll have to keep refreshing it. So, we may be able to find out whether the duplication of the same line item at the same created_at timestamp was a one-time glitch, or something ongoing. In the former case, the `distinct` should stop being included in the query, for performance reasons.
 
 ## Handling fact updates
-<small>_[2016-05-11]_</small>
+<span class="small">_[2016-05-11]_</span>
 
 - [Accumulating snapshot](http://decisionworks.com/2010/12/design-tip-130-accumulating-snapshots-for-complex-workflows/) fact table pattern sounded attractive, but we cannot apply it to our case. It is a way of handling late-arriving facts, but supposes access to the transactional workflow milestone data.
 - In our case, DFP is already returning us pre-aggregated snapshot data; it's just that the snapshot data can be restated over time as more atomic data accumulates on their end.
@@ -25,7 +44,7 @@
 - Best guess as of now: 14-day reload window (requires some further investigation to rule out first-of-month being exceptional)
 
 ## Slowly-changing dimension handling for dim_line_item
-<small>_[2016-05-09]_</small>
+<span class="small">_[2016-05-09]_</span>
 
 - Hold table load is somewhat incremental already: all modified items get added on to the hold table (not really distinguished from prior versions, but we can use `last_modified_date_time` for that)
 - So, pull for `dim_line_item` update begins by taking all records with most recent `created_at` timestamps from `hold_dfp_line_item`.
@@ -34,7 +53,7 @@
 - update `effective_end_dt` of those rows with current_date
 - **TL;DR**: treat line_item_code as the fixed SCD key; treat change in any other column as requiring a new record.
 
-    </article>
+    </pre>
     <!-- end markdown content section -->
 
     <script src="code/jquery-2.2.3.min.js"></script>
