--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 ## Self-referential TODO
 <span class="small">_[2016-05-18]_</span>
 
-While I want to keeping the styling and build of this page brutally simple, one thing I really should consider adding is [pygments](http://pygments.org/) or similar for code syntax highlighting
+While I want to keeping the styling and build of this page brutally simple, one thing I really should consider adding is [pygments](http://pygments.org/) or similar for code syntax highlighting.
+
+Also, look into why [straplessdown](https://github.com/yagermadden/straplessdown) is stripping inline HTML from the markdown source section. 😕
 
 ## Distinct line items from DFP line item service
 <span class="small">_[2016-05-18]_</span>
