--- a/output/categories.html
+++ b/output/categories.html
@@ -10,17 +10,17 @@
   <script src="https://use.fontawesome.com/72ee4db781.js"></script>
 </head>
 <body>
-<div class='small topmenu'><p><a href="./">Home</a> | <a href="./archives.html">Archives</a></p></div>
+<div class='small topmenu'><p><a href="/">Home</a> | <a href="/archives.html">Archives</a></p></div>
 
 <div id="banner">
 	<div class="container">
 		<div class="copy">
-			<h1><a href="./">TYM engineering notes</a></h1>
+			<h1><a href="/">TYM engineering notes</a></h1>
 		</div>
 	</div>
 </div><div id=main>
 <ul>
-    <li><a href="./category/misc.html">misc</a></li>
+    <li><a href="/category/misc.html">misc</a></li>
 </ul>
 
 </div>
