--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for TYM engineering notes</h1>
 
 <dl>
+    <dt>2016-07-13 16:13:30</dt>
+    <dd><a href="/pg_service-psycopg2.html">pg_service + psycopg2 = ❤️</a></dd>
     <dt>2016-06-29 22:54:20</dt>
     <dd><a href="/corrupt-database-disk-issue-at-gce.html">Corrupt database disk issue at GCE</a></dd>
     <dt>2016-06-23 07:24:35</dt>
