--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for TYM engineering notes</h1>
 
 <dl>
+    <dt>2016-07-14 17:42:15</dt>
+    <dd><a href="/using-pg_serviceconf.html">Using pg_service.conf</a></dd>
     <dt>2016-07-13 16:13:30</dt>
     <dd><a href="/pg_service-psycopg2.html">pg_service + psycopg2 = ❤️</a></dd>
     <dt>2016-06-29 22:54:20</dt>
