--- a/output/authors.html
+++ b/output/authors.html
@@ -10,18 +10,18 @@
   <script src="https://use.fontawesome.com/72ee4db781.js"></script>
 </head>
 <body>
-<div class='small topmenu'><p><a href="./">Home</a> | <a href="./archives.html">Archives</a></p></div>
+<div class='small topmenu'><p><a href="/">Home</a> | <a href="/archives.html">Archives</a></p></div>
 
 <div id="banner">
 	<div class="container">
 		<div class="copy">
-			<h1><a href="./">TYM engineering notes</a></h1>
+			<h1><a href="/">TYM engineering notes</a></h1>
 		</div>
 	</div>
 </div><div id=main>
     <h1>Authors on TYM engineering notes</h1>
 
-    <ul>        <li><a href="./author/thomas.html">Thomas</a> (7)</li>
+    <ul>        <li><a href="/author/thomas.html">Thomas</a> (7)</li>
     </ul>
 
 </div>
