--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for TYM engineering notes</h1>
 
 <dl>
+    <dt>2016-07-19 03:31:03</dt>
+    <dd><a href="/stackdriver.html">Stackdriver</a></dd>
     <dt>2016-07-14 17:42:15</dt>
     <dd><a href="/using-pg_serviceconf-with-luigi.html">Using pg_service.conf with Luigi</a></dd>
     <dt>2016-07-13 16:13:30</dt>
