--- a/output/archives.html
+++ b/output/archives.html
@@ -10,12 +10,12 @@
   <script src="https://use.fontawesome.com/72ee4db781.js"></script>
 </head>
 <body>
-<div class='small topmenu'><p><a href="./">Home</a> | <a href="./archives.html">Archives</a></p></div>
+<div class='small topmenu'><p><a href="/">Home</a> | <a href="/archives.html">Archives</a></p></div>
 
 <div id="banner">
 	<div class="container">
 		<div class="copy">
-			<h1><a href="./">TYM engineering notes</a></h1>
+			<h1><a href="/">TYM engineering notes</a></h1>
 		</div>
 	</div>
 </div><div id=main>
@@ -23,21 +23,21 @@
 
 <dl>
     <dt>2016-07-19 03:31:03</dt>
-    <dd><a href="./stackdriver.html">Stackdriver</a></dd>
+    <dd><a href="/stackdriver.html">Stackdriver</a></dd>
     <dt>2016-07-14 17:42:15</dt>
-    <dd><a href="./using-pg_serviceconf-with-luigi.html">Using pg_service.conf with Luigi</a></dd>
+    <dd><a href="/using-pg_serviceconf-with-luigi.html">Using pg_service.conf with Luigi</a></dd>
     <dt>2016-07-13 16:13:30</dt>
-    <dd><a href="./pg_service-psycopg2.html">pg_service + psycopg2 = ❤️</a></dd>
+    <dd><a href="/pg_service-psycopg2.html">pg_service + psycopg2 = ❤️</a></dd>
     <dt>2016-06-29 22:54:20</dt>
-    <dd><a href="./corrupt-database-disk-issue-at-gce.html">Corrupt database disk issue at GCE</a></dd>
+    <dd><a href="/corrupt-database-disk-issue-at-gce.html">Corrupt database disk issue at GCE</a></dd>
     <dt>2016-06-23 07:24:35</dt>
-    <dd><a href="./self-referential-todo.html">Self-referential TODO</a></dd>
+    <dd><a href="/self-referential-todo.html">Self-referential TODO</a></dd>
     <dt>2016-05-18 00:00:00</dt>
-    <dd><a href="./distinct-line-items-from-dfp-line-item-service.html">Distinct line items from DFP line item service</a></dd>
+    <dd><a href="/distinct-line-items-from-dfp-line-item-service.html">Distinct line items from DFP line item service</a></dd>
     <dt>2016-05-11 07:24:35</dt>
-    <dd><a href="./handling-fact-updates.html">Handling fact updates</a></dd>
+    <dd><a href="/handling-fact-updates.html">Handling fact updates</a></dd>
     <dt>2016-05-09 00:00:00</dt>
-    <dd><a href="./slowly-changing-dimension-handling-for-dim_line_item.html">Slowly-changing dimension handling for dim_line_item</a></dd>
+    <dd><a href="/slowly-changing-dimension-handling-for-dim_line_item.html">Slowly-changing dimension handling for dim_line_item</a></dd>
 </dl>
 
 </div>
