--- a/using-pg_serviceconf-with-luigi.html
+++ b/using-pg_serviceconf-with-luigi.html
@@ -39,6 +39,7 @@
         <pre><code>import luigi
 import luigi.postgres
 import psycopg2
+import os
 
 testdata = ([99, 'My fake plants died because I did not pretend to water'
              ' them.'],
@@ -104,13 +105,15 @@ class PgCopyToTable(luigi.postgres.CopyToTable):
 
 
 class PgExampleQuery(PgServiceQuery):
-    service = luigi.Parameter(default='local')
+    env_service = os.getenv('PGSERVICE', 'local')
+    service = luigi.Parameter(default=env_service)
     table = 'whoa'
     query = 'create table whoa (trival_id serial, whoa_txt text)'
 
 
 class PgExampleLoad(PgCopyToTable):
-    service = luigi.Parameter(default='local')
+    env_service = os.getenv('PGSERVICE', 'local')
+    service = luigi.Parameter(default=env_service)
     table = 'whoa'
     columns = [("trival_id", "INT"),
                ("description", "TEXT")]
@@ -149,5 +152,17 @@ class PgExampleLoad(PgCopyToTable):
          <div class="col-xs-2"><p class="pull-right"><a href="#"><i class="fa fa-arrow-up"></i></a></p></div>
       </div>
    </div>
-</footer></body>
+</footer>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-82820361-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
 </html>
