--- a/output/archives.html
+++ b/output/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for TYM engineering notes</h1>
 
 <dl>
+    <dt>2016-10-11 18:04:22</dt>
+    <dd><a href="/postgres-monitoring.html">Postgres Monitoring</a></dd>
     <dt>2016-07-19 03:31:03</dt>
     <dd><a href="/stackdriver.html">Stackdriver</a></dd>
     <dt>2016-07-14 17:42:15</dt>
@@ -57,5 +59,17 @@
          <div class="col-xs-2"><p class="pull-right"><a href="#"><i class="fa fa-arrow-up"></i></a></p></div>
       </div>
    </div>
-</footer></body>
+</footer>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-82820361-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
 </html>
