--- a/output/authors.html
+++ b/output/authors.html
@@ -21,7 +21,7 @@
 </div><div id=main>
     <h1>Authors on TYM engineering notes</h1>
 
-    <ul>        <li><a href="/author/thomas.html">Thomas</a> (8)</li>
+    <ul>        <li><a href="/author/thomas.html">Thomas</a> (9)</li>
     </ul>
 
 </div>
@@ -41,5 +41,17 @@
          <div class="col-xs-2"><p class="pull-right"><a href="#"><i class="fa fa-arrow-up"></i></a></p></div>
       </div>
    </div>
-</footer></body>
+</footer>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-82820361-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
 </html>
