--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for TYM engineering notes</h1>
 
 <dl>
+    <dt>2016-11-08 12:07:58</dt>
+    <dd><a href="/postgres-monitoring-trial-findings.html">Postgres Monitoring Trial Findings</a></dd>
     <dt>2016-10-11 18:04:22</dt>
     <dd><a href="/postgres-monitoring.html">Postgres Monitoring</a></dd>
     <dt>2016-07-19 03:31:03</dt>
