iAdOps Second-System Effect post

--- a/output/archives.html
+++ b/output/archives.html
@@ -22,6 +22,10 @@
 <h1>Archives for TYM engineering notes</h1>
 
 <dl>
+    <dt>2016-11-29 10:15:02</dt>
+    <dd><a href="/iadops-and-second-system-effect.html">iAdOps and Second-System Effect</a></dd>
+    <dt>2016-11-17 15:38:53</dt>
+    <dd><a href="/stackdriver-custom-metrics.html">Stackdriver custom metrics</a></dd>
     <dt>2016-11-08 12:07:58</dt>
     <dd><a href="/postgres-monitoring-trial-findings.html">Postgres Monitoring Trial Findings</a></dd>
     <dt>2016-10-11 18:04:22</dt>
