--- a/output/archives.html
+++ b/output/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for TYM engineering notes</h1>
 
 <dl>
+    <dt>2016-12-22 15:11:04</dt>
+    <dd><a href="/stupid-bash-tricks-no-17-editing-on-the-fly.html">Stupid bash tricks No. 17: Editing on the fly</a></dd>
     <dt>2016-11-29 10:15:02</dt>
     <dd><a href="/iadops-and-second-system-effect.html">iAdOps and Second-System Effect</a></dd>
     <dt>2016-11-17 15:38:53</dt>
