--- a/output/categories.html
+++ b/output/categories.html
@@ -8,38 +8,36 @@
   <link href="theme/main.css" rel="stylesheet" />
   <link href="theme/solarizeddark.css" rel="stylesheet" />
   <script src="https://use.fontawesome.com/72ee4db781.js"></script>
+  <link rel="icon" href="data:,">
 </head>
 <body>
-<div class='small topmenu'><p><a href="/">Home</a> | <a href="/archives.html">Archives</a></p></div>
 
+<div class='topwrapper'>
+<div class='small topmenu'><p><a href="./">Home</a> | <a href="./archives.html">Archives</a></p></div>
 <div id="banner">
-	<div class="container">
 		<div class="copy">
-			<h1><a href="/">TYM engineering notes</a></h1>
+			<h1><a href="./">TYM engineering notes</a></h1>
 		</div>
 	</div>
-</div><div id=main>
+</div>
+<div id=main>
 <ul>
-    <li><a href="/category/misc.html">misc</a></li>
+    <li><a href="./category/misc.html">misc</a></li>
 </ul>
-
 </div>
 </div>
 <footer class="foot-foot">
-   <div class="container">
       <!-- <hr> -->
       <div class="row">
-         <div class="col-xs-10 small"><p>&copy; 2016 <a href="https://github.com/tym-oao">Thomas</a><br>
-             <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" class="svg">
+         <div class="col-xs-10 small"><p>&copy; 2017 <a href="https://github.com/tym-oao">Thomas</a><br>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" class="svg">
                  <object type="image/svg+xml" data="images/cc-by-sa.svg"></object></a>  Some rights reserved. <br>
              Hypertext rendered with
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a></p>
 
-
          </div>
          <div class="col-xs-2"><p class="pull-right"><a href="#"><i class="fa fa-arrow-up"></i></a></p></div>
       </div>
-   </div>
 </footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
