--- a/output/authors.html
+++ b/output/authors.html
@@ -13,17 +13,17 @@
 <body>
 
 <div class='topwrapper'>
-<div class='small topmenu'><p><a href="/">Home</a> | <a href="/archives.html">Archives</a></p></div>
+<div class='small topmenu'><p><a href="./">Home</a> | <a href="./archives.html">Archives</a></p></div>
 <div id="banner">
 		<div class="copy">
-			<h1><a href="/">TYM engineering notes</a></h1>
+			<h1><a href="./">TYM engineering notes</a></h1>
 		</div>
 	</div>
 </div>
 <div id=main>
     <h1>Authors on TYM engineering notes</h1>
 
-    <ul>        <li><a href="/author/thomas.html">Thomas</a> (14)</li>
+    <ul>        <li><a href="./author/thomas.html">Thomas</a> (14)</li>
     </ul>
 </div>
 </div>
